--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,15 +13,15 @@ pool:
 steps:
 - script: |
     chmod +x travis/*.sh
-    apt-get update -y
-    apt-get install -y make git zlib1g-dev libssl-dev gperf cmake clang-10 libc++-10-dev libc++abi-10-dev ccache maven python3 python3-pip php7.2-cli openjdk-11-jdk
+    sudo apt-get update -y
+    sudo apt-get install -y make git zlib1g-dev libssl-dev gperf cmake clang-10 libc++-10-dev libc++abi-10-dev ccache maven python3 python3-pip php7.2-cli openjdk-11-jdk
   displayName: 'Pre installation'
 
 - script: |
-    ./travis/install_dependencies.sh
+    sudo ./travis/install_dependencies.sh
   displayName: 'Install deps'
 
 - script: |
-    ./travis/build.sh
+    sudo ./travis/build.sh
   displayName: 'Build'
 
