--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,21 +7,29 @@ trigger:
 - master
 - azure-integration
 
-pool:
-  vmImage: 'ubuntu-latest'
+
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-20.04"
+    mac:
+      imageName: "macos-10.14"
+    windows:
+      imageName: "vs2017-win2016"
+    maxParallel: 2
 
 steps:
 - script: |
-    chmod +x travis/*.sh
+    chmod +x azure/*.sh
     sudo apt-get update -y
     sudo apt-get install -y make git zlib1g-dev libssl-dev gperf cmake clang-10 libc++-10-dev libc++abi-10-dev ccache maven python3 python3-pip php7.2-cli openjdk-11-jdk
   displayName: 'Pre installation'
 
 - script: |
-    sudo ./travis/install_dependencies.sh
+    sudo ./azure/install_dependencies.sh
   displayName: 'Install deps'
 
 - script: |
-    sudo ./travis/build.sh
+    sudo ./azure/build.sh
   displayName: 'Build'
 
