--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,13 @@ strategy:
     linux:
       imageName: "ubuntu-20.04"
     mac:
-      imageName: "macos-10.14"
+      imageName: "macos-latest"
     windows:
-      imageName: "vs2017-win2016"
+      imageName: "azure-latest"
 
 steps:
+- task: 
+
 - script: |
     chmod +x azure/*.sh
     sudo apt-get update -y
