--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,13 @@ strategy:
   matrix:
     linux:
       imageName: "ubuntu-20.04"
+      vmImage: "ubuntu-latest"
     mac:
       imageName: "macos-latest"
+      vmImage: "ubuntu-latest"
     windows:
       imageName: "azure-latest"
+      vmImage: "ubuntu-latest"
 
 steps:
 - script: |
